--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Repository for AOKP/Funky Kernel brunching
+Repository for AOKP brunching
 
 To pull source run:
-$ repo init -u https://github.com/Snuzzo/funky_aokp_manifest.git -b ics
+$ repo init -u https://github.com/VigorAOKP/aokp_manifest.git -b ics
 $ repo sync
 
 To build:
